[gd_scene load_steps=10 format=2]

[ext_resource path="res://Materials/base levels/testing_mat.tres" type="Material" id=2]
[ext_resource path="res://Scripts/menus/TitleScreen/Title Screen.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Misc/fps counter.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/SIsilicon.3d.text/label_3d.gd" type="Script" id=5]
[ext_resource path="res://Fonts/big-space-font/BigSpace-rPKx.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/big-space-font/Title Screen.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scripts/menus/TitleScreen/GraphicsSettings.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 6 )

[node name="Title Screen" type="Spatial"]
script = ExtResource( 3 )

[node name="CSGCombiner" type="CSGCombiner" parent="."]
use_collision = true

[node name="CSGBox" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 16 )
width = 14.0
height = 10.0
material = ExtResource( 2 )

[node name="CSGBox4" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 6, 23 )
width = 14.0
height = 14.0
material = ExtResource( 2 )

[node name="CSGBox6" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -6, 23 )
width = 14.0
height = 14.0
material = ExtResource( 2 )

[node name="CSGBox2" type="CSGBox" parent="CSGCombiner"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8, 0, 22 )
width = 14.0
height = 14.0
material = ExtResource( 2 )

[node name="CSGBox3" type="CSGBox" parent="CSGCombiner"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -8, 0, 22 )
width = 14.0
height = 14.0
material = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 29.245 )
current = true

[node name="Main" type="Control" parent="Camera"]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics Settings" type="Button" parent="Camera/Main"]
margin_left = 1146.0
margin_top = 900.0
margin_right = 1528.0
margin_bottom = 1000.0
custom_fonts/font = ExtResource( 7 )
text = "Graphics Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Camera/Main"]
margin_left = 764.0
margin_top = 901.782
margin_right = 1146.0
margin_bottom = 1001.78
custom_fonts/font = SubResource( 1 )
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="Camera/Main"]
margin_left = 382.0
margin_top = 900.0
margin_right = 764.0
margin_bottom = 1000.0
mouse_default_cursor_shape = 16
custom_fonts/font = ExtResource( 7 )
text = "Controls"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmLeave" type="ConfirmationDialog" parent="Camera/Main"]
margin_left = 764.0
margin_top = 901.782
margin_right = 983.0
margin_bottom = 971.782
dialog_text = "Are you sure you want to leave?"

[node name="Controls menu" type="Control" parent="Camera"]
margin_left = -1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera/Controls menu"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_fonts/font = SubResource( 2 )
text = "WASD - Movement
Space - Jump
1 - Select Wall
2 - Select BigWall
Left Mouse Button - Place build
e-interact
ESC - Go Back or Pause Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics Settings" type="Control" parent="Camera"]
margin_left = 1920.0
margin_right = 3840.0
margin_bottom = 1080.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GQuality" type="Button" parent="Camera/Graphics Settings"]
margin_left = 400.0
margin_top = 340.0
margin_right = 782.0
margin_bottom = 440.0
custom_fonts/font = ExtResource( 7 )
text = "Graphics Quality: High"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSync" type="Button" parent="Camera/Graphics Settings"]
margin_left = 400.0
margin_top = 440.0
margin_right = 782.0
margin_bottom = 540.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.631373, 0.631373, 0.631373, 1 )
text = "VSync"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FS" type="Button" parent="Camera/Graphics Settings"]
margin_left = 400.0
margin_top = 540.0
margin_right = 782.0
margin_bottom = 640.0
custom_fonts/font = ExtResource( 7 )
text = "Fullscreen"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderLess" type="Button" parent="Camera/Graphics Settings"]
margin_left = 400.0
margin_top = 640.0
margin_right = 782.0
margin_bottom = 740.0
custom_fonts/font = ExtResource( 7 )
text = "Borderless"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps counter" parent="Camera" instance=ExtResource( 4 )]
position = Vector2( 40, 52.9167 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 31 )
light_indirect_energy = 0.31
shadow_enabled = true
omni_range = 155.0

[node name="Title" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 18.4737 )
script = ExtResource( 5 )
text = "Totally Futuristic
Testing Facilty"
text_size = 3.0
font = ExtResource( 7 )
align = 2
color = Color( 0.6, 0.6, 0.6, 1 )
metallic = 0.0
roughness = 0.5
emission_color = Color( 1, 1, 1, 1 )
emission_strength = 0.0
extrude = 0.1
max_steps = 256
step_size = 1.0
[connection signal="button_up" from="Camera/Main/Graphics Settings" to="." method="_on_Graphics_Settings_button_up"]
[connection signal="button_up" from="Camera/Main/Play" to="." method="_on_Play_button_up"]
[connection signal="button_up" from="Camera/Main/Controls" to="." method="_on_Controls_button_up"]
[connection signal="button_up" from="Camera/Graphics Settings/GQuality" to="Camera/Graphics Settings" method="_on_GQuality_button_up"]
[connection signal="button_up" from="Camera/Graphics Settings/VSync" to="Camera/Graphics Settings" method="_on_VSync_button_up"]
[connection signal="button_up" from="Camera/Graphics Settings/FS" to="Camera/Graphics Settings" method="_on_FS_button_up"]
[connection signal="button_up" from="Camera/Graphics Settings/BorderLess" to="Camera/Graphics Settings" method="_on_BorderLess_button_up"]
